[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "NetworkTopology"
version = "0.1"
authors = [{name="SB", email="seo.boon.ng@gmail.com" }]
description = "Convert and enrich a mrt file into mmdb"
readme = "README.md"
dependencies = ["tqdm"]
requires-python = ">=3.9"

[project.scripts]
gen_topo = "NetworkToplogy.make_topo:main"
